feat :  prompt utilizado y quite una cell inutil

--- a/lab6.ipynb
+++ b/lab6.ipynb
@@ -52,49 +52,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para esta Task elegimos la opcion de poder usar un ambiente generado por IA, en este caso utilice DeepSeek para la creacion del ambiente junto con algunos ajustes propios para poder visualizar el tablero."
+    "Para esta Task elegimos la opcion de poder usar un ambiente generado por IA, en este caso utilice DeepSeek para la creacion del ambiente junto con algunos ajustes propios para poder visualizar el tablero. Prompt utilizado: Me puedes ayudar a crear un ambiente que simulee el juego de connect 4 para poder usar un agente que use Minimax, o sea quiero el ambiente por ahora con las reglas y recompensas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pygame'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpygame\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msys\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pygame'"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "import pygame\n",
-    "import sys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pygame'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpygame\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msys\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# Constantes\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pygame'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -198,18 +163,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pygame' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Inicializar Pygame\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mpygame\u001b[49m.init()\n\u001b[32m      3\u001b[39m screen = pygame.display.set_mode((WIDTH, HEIGHT))\n\u001b[32m      4\u001b[39m pygame.display.set_caption(\u001b[33m\"\u001b[39m\u001b[33mConnect 4\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'pygame' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]]\n",
+      "Jugador 2 hizo un movimiento en la columna 0\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0]]\n",
+      "Jugador 1 hizo un movimiento en la columna 2\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [1 0 2 0 0 0 0]]\n",
+      "Jugador 2 hizo un movimiento en la columna 0\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0]\n",
+      " [1 0 2 0 0 0 0]]\n",
+      "Jugador 1 hizo un movimiento en la columna 3\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0]\n",
+      " [1 0 2 2 0 0 0]]\n",
+      "Jugador 2 hizo un movimiento en la columna 0\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0]\n",
+      " [1 0 2 2 0 0 0]]\n",
+      "Jugador 1 hizo un movimiento en la columna 6\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0]\n",
+      " [1 0 2 2 0 0 2]]\n",
+      "Jugador 2 hizo un movimiento en la columna 1\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0]\n",
+      " [1 1 2 2 0 0 2]]\n",
+      "Jugador 1 hizo un movimiento en la columna 3\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0]\n",
+      " [1 0 0 2 0 0 0]\n",
+      " [1 1 2 2 0 0 2]]\n",
+      "Jugador 2 hizo un movimiento en la columna 1\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0]\n",
+      " [1 1 0 2 0 0 0]\n",
+      " [1 1 2 2 0 0 2]]\n",
+      "Jugador 1 hizo un movimiento en la columna 3\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [1 0 0 2 0 0 0]\n",
+      " [1 1 0 2 0 0 0]\n",
+      " [1 1 2 2 0 0 2]]\n",
+      "Jugador 2 hizo un movimiento en la columna 0\n",
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [1 0 0 0 0 0 0]\n",
+      " [1 0 0 2 0 0 0]\n",
+      " [1 1 0 2 0 0 0]\n",
+      " [1 1 2 2 0 0 2]]\n",
+      "El juego ha terminado. Ganador: 1\n"
      ]
     }
    ],
